Handle swagger spec $ref attribute siblings
These fields are ignored (by spec), but in order to avoid a bunch of x-okta-* props, we are allowing siblings.
This lets us add `readOnly` attributes (and get the working)

--- a/pom.xml
+++ b/pom.xml
@@ -238,6 +238,9 @@
                     <configuration>
                         <!-- This is relative to a direct sub module -->
                         <apiFile>${project.basedir}/../src/swagger/api.yaml</apiFile>
+                        <additionalProperties>
+                            <apiFile>${project.basedir}/../src/swagger/api.yaml</apiFile>
+                        </additionalProperties>
                     </configuration>
                     <dependencies>
                         <dependency>
