Add validation for body, query, and path params
Fixes: #115

--- a/src/swagger/api.yaml
+++ b/src/swagger/api.yaml
@@ -2147,7 +2147,7 @@
             "default": true,
             "in": "query",
             "name": "sendEmail",
-            "required": true,
+            "required": false,
             "type": "boolean"
           }
         ],
