--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,14 @@
 language: java
 jdk:
 - oraclejdk8
+addons:
+  apt:
+    packages:
+    - libxml2-utils
 before_install:
 - source ./src/ci/before_install.sh
+install:
+- "true"
 script:
 - "./src/ci/build.sh"
 after_success:
