--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,7 @@
 
     <name>Okta Java SDK</name>
     <description>Okta SDK for Java</description>
-    <url>https://github.com/okta/oktasdk-java</url>
+    <url>https://github.com/okta/okta-sdk-java</url>
     <inceptionYear>2017</inceptionYear>
 
     <properties>
