--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
     <parent>
         <groupId>com.okta</groupId>
         <artifactId>okta-parent</artifactId>
-        <version>3</version>
+        <version>4-SNAPSHOT</version>
         <relativePath>../okta-java-parent</relativePath>
     </parent>
 
@@ -259,11 +259,13 @@
                     </dependencies>
                 </plugin>
                 <plugin>
-                    <groupId>org.codehaus.mojo</groupId>
-                    <artifactId>versions-maven-plugin</artifactId>
-                    <version>2.5</version>
+                    <groupId>com.okta</groupId>
+                    <artifactId>okta-doclist-maven-plugin</artifactId>
+                    <version>4-SNAPSHOT</version>
                     <configuration>
-                        <generateBackupPoms>false</generateBackupPoms>
+                        <legacyVersions>
+                            <legacyVersion>0.0.4</legacyVersion>
+                        </legacyVersions>
                     </configuration>
                 </plugin>
             </plugins>
@@ -272,16 +274,7 @@
             <plugin>
                 <groupId>org.jasig.maven</groupId>
                 <artifactId>maven-notice-plugin</artifactId>
-                <version>1.1.0</version>
                 <inherited>false</inherited>
-                <configuration>
-                    <fileName>THIRD-PARTY-NOTICES</fileName>
-                    <generateChildNotices>false</generateChildNotices>
-                    <noticeTemplate>${root.dir}/src/license/NOTICE.template</noticeTemplate>
-                    <licenseMapping>
-                        <mapping>src/license/mapping.xml</mapping>
-                    </licenseMapping>
-                </configuration>
                 <executions>
                     <execution>
                         <phase>generate-resources</phase>
