--- a/.travis.yml
+++ b/.travis.yml
@@ -15,3 +15,13 @@ script:
 - "./src/ci/build.sh"
 after_success:
   - bash <(curl -s https://codecov.io/bash) -f coverage/target/site/jacoco-aggregate/jacoco.xml
+
+deploy:
+  - provider: pages
+    skip_cleanup: true
+    github_token: $GH_API_KEY
+    local_dir: target/gh-pages
+    email: developers@okta.com
+    name: Travis CI - Auto Doc Build
+    on:
+      branch: master
