--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
     <parent>
         <groupId>com.okta</groupId>
         <artifactId>okta-parent</artifactId>
-        <version>3</version>
+        <version>4-SNAPSHOT</version>
         <relativePath>../okta-java-parent</relativePath>
     </parent>
 
@@ -296,15 +296,9 @@
             <plugin>
                 <groupId>org.jasig.maven</groupId>
                 <artifactId>maven-notice-plugin</artifactId>
-                <version>1.1.0</version>
                 <inherited>false</inherited>
                 <configuration>
-                    <fileName>THIRD-PARTY-NOTICES</fileName>
-                    <generateChildNotices>false</generateChildNotices>
                     <noticeTemplate>${root.dir}/src/license/NOTICE.template</noticeTemplate>
-                    <licenseMapping>
-                        <mapping>src/license/mapping.xml</mapping>
-                    </licenseMapping>
                 </configuration>
                 <executions>
                     <execution>
