--- a/src/swagger/api.yaml
+++ b/src/swagger/api.yaml
@@ -29,7 +29,7 @@
       "name": "Apache-2.0",
       "url": "http://www.apache.org/licenses/LICENSE-2.0.html"
     },
-    "version": "1.2.0"
+    "version": "1.3.0"
   },
   "externalDocs": {
     "description": "Find more info here",
@@ -1062,6 +1062,13 @@
             "in": "query",
             "name": "after",
             "type": "string"
+          },
+          {
+            "default": "",
+            "in": "query",
+            "name": "expand",
+            "type": "string",
+            "x-okta-added-version": "1.3.0"
           }
         ],
         "produces": [
@@ -1141,6 +1148,7 @@
             "type": "string"
           },
           {
+            "default": false,
             "in": "query",
             "name": "removeUsers",
             "type": "boolean"
@@ -1176,6 +1184,13 @@
             "name": "ruleId",
             "required": true,
             "type": "string"
+          },
+          {
+            "default": "",
+            "in": "query",
+            "name": "expand",
+            "type": "string",
+            "x-okta-added-version": "1.3.0"
           }
         ],
         "produces": [
@@ -1453,6 +1468,13 @@
             "in": "query",
             "name": "limit",
             "type": "integer"
+          },
+          {
+            "default": "all",
+            "in": "query",
+            "name": "managedBy",
+            "type": "string",
+            "x-okta-added-version": "1.3.0"
           }
         ],
         "produces": [
@@ -1876,6 +1898,15 @@
             "in": "query",
             "name": "provider",
             "type": "boolean"
+          },
+          {
+            "default": false,
+            "description": "With activate=true, set nextLogin to \"changePassword\" to have the password be EXPIRED, so user must change it the next time they log in.",
+            "in": "query",
+            "name": "nextLogin",
+            "type": "string",
+            "x-okta-added-version": "0.14.0",
+            "x-openapi-v3-schema-ref": "#/definitions/UserNextLogin"
           }
         ],
         "produces": [
@@ -2269,6 +2300,21 @@
             "in": "query",
             "name": "templateId",
             "type": "string"
+          },
+          {
+            "default": 300,
+            "format": "int32",
+            "in": "query",
+            "name": "tokenLifetimeSeconds",
+            "type": "integer",
+            "x-okta-added-version": "1.3.0"
+          },
+          {
+            "default": false,
+            "in": "query",
+            "name": "activate",
+            "type": "boolean",
+            "x-okta-added-version": "1.3.0"
           }
         ],
         "produces": [
@@ -2526,6 +2572,14 @@
             "in": "query",
             "name": "templateId",
             "type": "string"
+          },
+          {
+            "default": 300,
+            "format": "int32",
+            "in": "query",
+            "name": "tokenLifetimeSeconds",
+            "type": "integer",
+            "x-okta-added-version": "1.3.0"
           },
           {
             "in": "body",
@@ -3459,6 +3513,12 @@
           "readOnly": true,
           "type": "string"
         },
+        "profile": {
+          "additionalProperties": {
+            "type": "object"
+          },
+          "type": "object"
+        },
         "settings": {
           "$ref": "#/definitions/ApplicationSettings"
         },
@@ -3820,6 +3880,9 @@
         "app": {
           "$ref": "#/definitions/ApplicationSettingsApplication"
         },
+        "implicitAssignment": {
+          "type": "boolean"
+        },
         "notifications": {
           "$ref": "#/definitions/ApplicationSettingsNotifications"
         }
@@ -4156,6 +4219,26 @@
         "Session"
       ]
     },
+    "EmailAddress": {
+      "properties": {
+        "status": {
+          "$ref": "#/definitions/EmailStatus",
+          "readOnly": true
+        },
+        "type": {
+          "$ref": "#/definitions/EmailType",
+          "readOnly": true
+        },
+        "value": {
+          "readOnly": true,
+          "type": "string"
+        }
+      },
+      "type": "object",
+      "x-okta-tags": [
+        "User"
+      ]
+    },
     "EmailFactor": {
       "properties": {
         "profile": {
@@ -4176,6 +4259,26 @@
       "x-okta-parent": "#/definitions/FactorProfile",
       "x-okta-tags": [
         "UserFactor"
+      ]
+    },
+    "EmailStatus": {
+      "enum": [
+        "VERIFIED",
+        "UNVERIFIED"
+      ],
+      "type": "string",
+      "x-okta-tags": [
+        "User"
+      ]
+    },
+    "EmailType": {
+      "enum": [
+        "PRIMARY",
+        "SECONDARY"
+      ],
+      "type": "string",
+      "x-okta-tags": [
+        "User"
       ]
     },
     "Factor": {
@@ -4226,6 +4329,9 @@
         "status": {
           "$ref": "#/definitions/FactorStatus",
           "readOnly": true
+        },
+        "tokenLifetimeSeconds": {
+          "type": "integer"
         },
         "userId": {
           "type": "string"
@@ -4504,8 +4610,18 @@
     },
     "GroupRule": {
       "properties": {
+        "_embedded": {
+          "additionalProperties": {
+            "type": "object"
+          },
+          "readOnly": true,
+          "type": "object"
+        },
         "actions": {
           "$ref": "#/definitions/GroupRuleAction"
+        },
+        "allGroupsValid": {
+          "type": "boolean"
         },
         "conditions": {
           "$ref": "#/definitions/GroupRuleConditions"
@@ -4730,6 +4846,13 @@
     },
     "JsonWebKey": {
       "properties": {
+        "_links": {
+          "additionalProperties": {
+            "type": "object"
+          },
+          "readOnly": true,
+          "type": "object"
+        },
         "alg": {
           "readOnly": true,
           "type": "string"
@@ -6549,6 +6672,12 @@
     },
     "UserCredentials": {
       "properties": {
+        "emails": {
+          "items": {
+            "$ref": "#/definitions/EmailAddress"
+          },
+          "type": "array"
+        },
         "password": {
           "$ref": "#/definitions/PasswordCredential"
         },
@@ -6560,6 +6689,15 @@
         }
       },
       "type": "object",
+      "x-okta-tags": [
+        "User"
+      ]
+    },
+    "UserNextLogin": {
+      "enum": [
+        "changePassword"
+      ],
+      "type": "string",
       "x-okta-tags": [
         "User"
       ]
@@ -6620,6 +6758,9 @@
         },
         "passCode": {
           "type": "string"
+        },
+        "tokenLifetimeSeconds": {
+          "type": "integer"
         }
       },
       "type": "object",
