--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -37,6 +37,10 @@
             <artifactId>okta-sdk-api</artifactId>
         </dependency>
         <dependency>
+            <groupId>com.okta.commons</groupId>
+            <artifactId>okta-config-check</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
         </dependency>
