--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
     <parent>
         <groupId>com.okta</groupId>
         <artifactId>okta-parent</artifactId>
-        <version>6</version>
+        <version>7</version>
         <relativePath>../okta-java-parent</relativePath>
     </parent>
 
@@ -78,6 +78,13 @@
                 <groupId>com.okta.sdk</groupId>
                 <artifactId>okta-sdk-httpclient</artifactId>
                 <version>1.2.1-SNAPSHOT</version>
+            </dependency>
+
+            <!-- Other Okta Projects -->
+            <dependency>
+                <groupId>com.okta.commons</groupId>
+                <artifactId>okta-config-check</artifactId>
+                <version>1.0.0-SNAPSHOT</version>
             </dependency>
 
             <!-- ITs -->
