--- a/api/pom.xml
+++ b/api/pom.xml
@@ -39,6 +39,10 @@
             <artifactId>okta-config-check</artifactId>
         </dependency>
         <dependency>
+            <groupId>com.okta.commons</groupId>
+            <artifactId>okta-commons-lang</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
         </dependency>
